@@ -9,9 +9,9 @@
 	<status>Development</status>
 	<status>RC1</status>
 	
-	<build>Build 5008</build>
+	<build>Build 5015</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>08.05.2008 - 14:11</release_date>
+	<release_date>12.05.2008 - 19:08</release_date>
 	<toenda_copyright>2003 - 2008</toenda_copyright>
 </version>
